--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>IBM Data Science</center> \n",
+    "# IBM Data Science\n",
     "\n",
-    "### <center>This notebook will be use for the Applied Data Science Capstone Project</center>\n",
+    "### This notebook will be use for the Applied Data Science Capstone Project\n",
     "\n",
     "***"
    ]
