--- a/Neighburhoods_in_Toronto.ipynb
+++ b/Neighburhoods_in_Toronto.ipynb
@@ -1314,14 +1314,14 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: LRHP1G0RTWGHAYIBQANN2PEUTL1JDFOH0L0UVQ2NHQLT20SK\n",
-      "CLIENT_SECRET:35XM4U35SLK1UGAOEFW2LV2Z05C2PINU02T1BHVCRN5BAITQ\n"
+      "CLIENT_ID: $$$$$$",
+      "CLIENT_SECRET:$$$$$$$$$$$$$$$$$$$\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'LRHP1G0RTWGHAYIBQANN2PEUTL1JDFOH0L0UVQ2NHQLT20SK' # your Foursquare ID\n",
-    "CLIENT_SECRET = '35XM4U35SLK1UGAOEFW2LV2Z05C2PINU02T1BHVCRN5BAITQ' # your Foursquare Secret\n",
+    "CLIENT_ID = '$$$$$$$$$$$$$' # your Foursquare ID\n",
+    "CLIENT_SECRET = '$$$$$$$$$$$$$$$$$$$$$$' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
